# video-annotator

./: .dockerignore  .env  .env.development  .env.docker-e2e  .env.e2e  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.e2e.yml  logs.txt  package-lock.json  package.json  playwright.config.ts  prd.json
.codex/: config.toml
archive/: README.md
archive/docs/: README.md  spec.md
archive/milestones/: Milestones Index.md
archive/notes/: API endpoint search rank report 2026-04-22.md  Auditing PRD Feature Coverage.md  Auditing backlog task drift 2026-04-22.md  Backlog migration 2026-04-28.md  Comparing live pages against UI mockups 2026-04-21.md  Implementation audit and roadmap 2026-04-28.md  Notes Index.md  PRD Completeness Audit.md  Repo Current State and Feature Matrix.md
archive/plans/: Plan Template.md  Plans Index.md
backend/: .gitignore  Dockerfile.e2e  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260421_0001_initial_schema.py  20260422_0002_add_frame_annotation_mask_confidence.py  20260424_0003_add_export_records.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  exports.py  jobs.py  videos.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  base.py  init_db.py  migrations.py  models.py  session.py  videos.py
backend/app/db/seeds/: __init__.py  baseline.py  review_navigation.py
backend/app/models/: __init__.py  video.py
backend/app/schemas/: __init__.py  annotation.py  health.py  sam2.py  video.py
backend/app/services/: __init__.py  exports.py  frame_annotations.py  manual_frame_annotations.py  object_tracks.py  review_summaries.py  sam2.py  video_catalog.py  video_frames.py  video_indexing.py  video_manifest.py  video_metadata.py
backend/app/tooling/: __init__.py  coverage_gate.py
backend/scripts/: __init__.py  check_coverage_gate.py  docker_e2e_init.sh  prepare_db.py  seed_e2e.py
backend/tests/: conftest.py
backend/tests/api/: test_annotation_foundation_manual_box.py  test_frame_annotations.py  test_review_summary_contracts.py  test_sam2_prompt_box.py  test_sam2_propagation_jobs.py  test_sam2_sessions.py  test_sam2_shell_runtime.py  test_video_ingest_exact_frame.py  test_videos.py
backend/tests/factories/: models.py  test_model_factories.py
backend/tests/integration/api/: test_annotation_foundation_manual_box.py  test_database_prepare.py  test_export_api.py  test_review_summary_contracts.py  test_sam2_shell_runtime.py  test_video_ingest_exact_frame.py
backend/tests/models/: test_annotation_models.py
backend/tests/services/: test_video_indexing.py
backend/tests/unit/api/: test_videos_routes.py
backend/tests/unit/factories/: test_model_factories.py
backend/tests/unit/models/: test_frame_annotation_models.py  test_object_track.py  test_sam2_models.py  test_video.py
backend/tests/unit/services/: test_config.py  test_exports.py  test_frame_annotations.py  test_manual_frame_annotations.py  test_migrations.py  test_object_tracks.py  test_review_summaries.py  test_sam2.py  test_video_frames.py  test_video_metadata.py
backend/tests/unit/tooling/: test_coverage_gate.py  test_docker_e2e_backend.py  test_docker_e2e_compose.py  test_repo_hook_commands.py  test_repo_test_commands.py
backend/video_annotator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backlog/: config.yml
basic-memory/: Memory Index.md  Workflow.md
data/: README.md
docs/: spec.md
exports/: README.md
frontend/: .dockerignore  Dockerfile.e2e  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
masks/: README.md
scripts/: backend-reset.mjs  dev.mjs  docker-e2e.mjs  env.mjs  run-with-env.mjs
(+657 files in other folders)
