[project]
name = "video-annotator"
version = "0.1.0"
description = "Backend tooling baseline for the local-first video annotator."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "httpx>=0.28.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.402",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.11.5",
]

[project.optional-dependencies]
sam2 = ["sam-2 ; sys_platform == 'linux'"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
sam-2 = { git = "https://github.com/facebookresearch/sam2.git" }

[tool.uv]
no-build-isolation-package = ["sam-2"]

[tool.uv.extra-build-dependencies]
sam-2 = ["setuptools>=69", { requirement = "torch", match-runtime = true }]

[[tool.uv.dependency-metadata]]
name = "sam-2"
version = "1.0"
requires-dist = [
  "torch>=2.5.1",
  "torchvision>=0.20.1",
  "numpy>=1.24.4",
  "tqdm>=4.66.1",
  "hydra-core>=1.3.2",
  "iopath>=0.1.10",
  "pillow>=9.4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # import sorting
  "B",   # bugbear
  "UP",  # pyupgrade / modern Python
  "C4",  # comprehensions
  "SIM", # simplifications
  "RUF", # ruff-specific rules
  "ISC", # implicit string concatenation
  "ARG", # unused arguments
  "ANN", # annotation presence
  "D",   # docstrings
  "TID", # import conventions / banned APIs
]
ignore = [
  "D100", # undocumented public module
  "D104", # undocumented public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["app", "tests"]
exclude = ["**/node_modules", "**/__pycache__", "**/.venv", "**/.*"]
pythonVersion = "3.12"
reportMissingTypeStubs = false
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
stubPath = "./stubs"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
skip_empty = true
show_missing = true
